bug: fix overflow bug on team member image hover

--- a/__pages__/home/segments/teams/teams.module.scss
+++ b/__pages__/home/segments/teams/teams.module.scss
@@ -4,7 +4,7 @@
 .teams__wrapper {
   position: relative;
   .teams {
-    background: linear-gradient(90deg, #100c1a 50%, #0F0C1A 100%);
+    background: linear-gradient(90deg, #100c1a 50%, #0f0c1a 100%);
     .teams__text {
       width: fit-content;
       margin: auto;
@@ -95,17 +95,17 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
   .team__member__image {
     width: 7.5rem;
     height: 7.5rem;
     margin-bottom: 2.6875rem;
     border-radius: 50%;
-    transition: 400ms;
+    transition: $fast-transition-speed;
 
-    // &:hover {
-    // transition: transform .5s; 
-    // transform: scale(1.5);
-  // }
+    &:hover {
+      transform: scale(1.1);
+    }
     @include mobile-breakpoint {
       width: 196px;
       height: 196px;
